Fixes: NB#211496 - Status indicators in status bar aren't top-aligned
Bug: NB#211496 - Status indicators in status bar aren't top-aligned
RevBy: TrustMe

--- a/themes/style/statusarea.css
+++ b/themes/style/statusarea.css
@@ -56,7 +56,7 @@ ClockStyle:twelve-hour {
 MLabelStyle#StatusAreaLandscapeClockLabel {
     font: $FONT_SMALL;
     color: #FFFFFF;
-    margin-left: 1.6mm;
+    margin-left: 0;
     margin-right: 0;
     margin-top: 0;
     margin-bottom: 0;
@@ -64,14 +64,14 @@ MLabelStyle#StatusAreaLandscapeClockLabel {
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    preferred-size: -1 3.0mm;
-    minimum-size: -1 3.0mm;
-    maximum-size: -1 3.0mm;
+    preferred-size: -1 3.6mm;
+    minimum-size: -1 3.6mm;
+    maximum-size: -1 3.6mm;
 }
 MLabelStyle#StatusAreaPortraitClockLabel {
     font: $FONT_SMALL;
     color: #FFFFFF;
-    margin-left: 1.6mm;
+    margin-left: 0;
     margin-right: 0;
     margin-top: 0;
     margin-bottom: 0;
@@ -79,9 +79,9 @@ MLabelStyle#StatusAreaPortraitClockLabel {
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    preferred-size: -1 3.0mm;
-    minimum-size: -1 3.0mm;
-    maximum-size: -1 3.0mm;
+    preferred-size: -1 3.6mm;
+    minimum-size: -1 3.6mm;
+    maximum-size: -1 3.6mm;
 }
 
 StatusIndicatorIconStyle {
@@ -91,7 +91,7 @@ StatusIndicatorIconStyle {
 
 StatusIndicatorAnimationStyle {
     /* This style is used when there is no icon ID defined (width is 0) */
-    margin-top: 0.6mm;
+    margin-top: 0.1mm;
     margin-bottom: 0;
     margin-left: 0;
     margin-right: 0;
@@ -108,12 +108,12 @@ StatusIndicatorAnimationStyle {
 }
 
 StatusIndicatorAnimationStyle:icon {
-    /* This style is used when there is an icon ID defined (width is 14) */
-    margin-left: 0.35mm;
-    margin-right: 0.35mm;
-    preferred-size: 1.4mm 1.8mm;
-    minimum-size: 1.4mm 1.8mm;
-    maximum-size: 1.4mm 1.8mm;
+    /* This style is used when there is an icon ID defined (width is 18) */
+    margin-left: 0.3mm;
+    margin-right: 0.3mm;
+    preferred-size: 1.8mm 1.8mm;
+    minimum-size: 1.8mm 1.8mm;
+    maximum-size: 1.8mm 1.8mm;
 }
 
 StatusIndicatorAnimationStyle#InputMethodStatusIndicator {
@@ -133,9 +133,9 @@ StatusIndicatorLabelStyle {
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    preferred-size: 13.0mm 3mm;
-    minimum-size: 0 3mm;
-    maximum-size: 13.0mm 3mm;
+    preferred-size: -1 3.6mm;
+    minimum-size: 0 3.6mm;
+    maximum-size: -1 3.6mm;
 }
 
 MLabelStyle#StatusIndicatorLabel {
@@ -149,9 +149,9 @@ MLabelStyle#StatusIndicatorLabel {
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    preferred-size: 13.0mm 3mm;
-    minimum-size: 0 3mm;
-    maximum-size: 13.0mm 3mm;
+    preferred-size: 13.0mm 3.6mm;
+    minimum-size: 0 3.6mm;
+    maximum-size: 13.0mm 3.6mm;
 }
 
 MLabelStyle#StatusIndicatorLabelLandscape {
@@ -159,15 +159,15 @@ MLabelStyle#StatusIndicatorLabelLandscape {
     color: #FFFFFF;
     margin-left: 0;
     margin-right: 0;
-    margin-top: 0.1mm;
+    margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    preferred-size: 55.0mm 3mm;
-    minimum-size: 0 3mm;
-    maximum-size: 55.0mm 3mm;
+    preferred-size: 55.0mm 3.6mm;
+    minimum-size: 0 3.6mm;
+    maximum-size: 55.0mm 3.6mm;
 }
 
 MLabelStyle#StatusIndicatorLabelPortrait {
@@ -175,15 +175,15 @@ MLabelStyle#StatusIndicatorLabelPortrait {
     color: #FFFFFF;
     margin-left: 0;
     margin-right: 0;
-    margin-top: 0.1mm;
+    margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    preferred-size: 17.0mm 3mm;
-    minimum-size: 0 3mm;
-    maximum-size: 17.0mm 3mm;
+    preferred-size: 17.0mm 3.6mm;
+    minimum-size: 0 3.6mm;
+    maximum-size: 17.0mm 3.6mm;
 }
 
 StatusIndicatorIconStyle#PhoneNetworkSignalStrengthStatusIndicator {
@@ -196,30 +196,30 @@ StatusIndicatorIconStyle#PhoneNetworkSignalStrengthStatusIndicator {
 
 StatusIndicatorIconStyle#PhoneNetworkTypeStatusIndicator2G {
     image-list: "icon-s-status-gsm";
-    preferred-size: 1.6mm 1.6mm;
-    minimum-size: 1.6mm 1.6mm;
-    maximum-size: 1.6mm 1.6mm;
+    preferred-size: 1.8mm 1.8mm;
+    minimum-size: 1.8mm 1.8mm;
+    maximum-size: 1.8mm 1.8mm;
 }
 
 StatusIndicatorIconStyle#PhoneNetworkTypeStatusIndicator25G {
     image-list: "icon-s-status-25g";
-    preferred-size: 1.6mm 1.6mm;
-    minimum-size: 1.6mm 1.6mm;
-    maximum-size: 1.6mm 1.6mm;
+    preferred-size: 1.8mm 1.8mm;
+    minimum-size: 1.8mm 1.8mm;
+    maximum-size: 1.8mm 1.8mm;
 }
 
 StatusIndicatorIconStyle#PhoneNetworkTypeStatusIndicator3G {
     image-list: "icon-s-status-3g";
-    preferred-size: 1.6mm 1.6mm;
-    minimum-size: 1.6mm 1.6mm;
-    maximum-size: 1.6mm 1.6mm;
+    preferred-size: 1.8mm 1.8mm;
+    minimum-size: 1.8mm 1.8mm;
+    maximum-size: 1.8mm 1.8mm;
 }
 
 StatusIndicatorIconStyle#PhoneNetworkTypeStatusIndicator35G {
     image-list: "icon-s-status-35g";
-    preferred-size: 1.6mm 1.6mm;
-    minimum-size: 1.6mm 1.6mm;
-    maximum-size: 1.6mm 1.6mm;
+    preferred-size: 1.8mm 1.8mm;
+    minimum-size: 1.8mm 1.8mm;
+    maximum-size: 1.8mm 1.8mm;
 }
 
 StatusIndicatorIconStyle#PhoneNetworkTypeStatusIndicatorNoSIM {
@@ -231,9 +231,9 @@ StatusIndicatorIconStyle#PhoneNetworkTypeStatusIndicatorNoSIM {
 
 StatusIndicatorIconStyle#PhoneNetworkTypeStatusIndicatorNoNetwork {
     image-list: "icon-s-status-no-gsm-connection";
-    preferred-size: 1.6mm 1.8mm;
-    minimum-size: 1.6mm 1.8mm;
-    maximum-size: 1.6mm 1.8mm;
+    preferred-size: 1.8mm 1.8mm;
+    minimum-size: 1.8mm 1.8mm;
+    maximum-size: 1.8mm 1.8mm;
 }
 
 StatusIndicatorIconStyle#PhoneNetworkTypeStatusIndicatorOffline {
@@ -289,9 +289,9 @@ StatusIndicatorIconStyle#AlarmStatusIndicator {
 StatusIndicatorIconStyle#AlarmStatusIndicatorSet {
     /* The list of IDs of the images to be shown in the status indicator separated by spaces */
     image-list: "icon-s-status-alarm";
-    preferred-size: 1.6mm 1.6mm;
-    minimum-size: 1.6mm 1.6mm;
-    maximum-size: 1.6mm 1.6mm;
+    preferred-size: 1.8mm 1.8mm;
+    minimum-size: 1.8mm 1.8mm;
+    maximum-size: 1.8mm 1.8mm;
     padding-top: 0.1mm;
     padding-bottom: 0.1mm;
     margin-top: 0;
